Variablized several parameters
Signed-off-by: Brad Dausses <brad.dausses@gmail.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -3,6 +3,15 @@
 key_name = "ENTER YOUR KEY NAME HERE"
 
 # OPTIONAL Variables
-# Define DNS info - If you have a hosted zone in Route 53, you can enter in the domain name and host name that you want to use here.
-domain = "your-route53-hosted-zone.com"
-dns_record = "harbor"
+# Define DNS info - If you have a hosted zone in Route 53, you can uncomment these 2 lines and enter in the domain name and host name that you want to use here.
+# domain = "your-route53-hosted-zone.com"
+# dns_record = "harbor"
+
+# AWS Profile - If you have multiple AWS CLI profiles, you can uncomment this line and set the one to use here.
+# aws_profile = "your-profile-name"
+
+# AWS Region - If you want to use something other than us-east-1, uncomment this line and specify the region to use here.
+# aws_region = "your-preferred-aws-region"
+
+# Harbor admin password - If you want to use something other than the default of 'Harbor12345', uncomment this line and set that passsword here.
+# harbor_admin_password = "your-password-here"
